kubernetes/apps/default/rssbridge/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rssbridge
  labels:
    app.kubernetes.io/part-of: rssbridge
    app.kubernetes.io/name: rssbridge
spec:
  replicas: 1
  revisionHistoryLimit: 0
  serviceName: "rssbridge"
  selector:
    matchLabels:
      app.kubernetes.io/part-of: rssbridge
      app.kubernetes.io/name: rssbridge
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: rssbridge
        app.kubernetes.io/name: rssbridge
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: rssbridge-data
        - name: config
          configMap:
            name: rssbridge-config
      containers:
        - name: rssbridge
          image: rssbridge/rss-bridge:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /app/config.ini.php
              subPath: config.ini.php
              readOnly: true
            - name: data
              mountPath: /config
          ports:
            - containerPort: 80
              name: http
