kubernetes/apps/default/rssbridge/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rssbridge
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: rssbridge.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rssbridge
                port:
                  name: http
  tls:
    - secretName: rssbridge-tls
      hosts:
        - rssbridge.fadhlika.com
